@@ -12,13 +12,11 @@ if defined _OLD_VIRTUAL_PROMPT (
 set _OLD_VIRTUAL_PROMPT=%PROMPT%
 set PROMPT=(__VIRTUAL_NAME__) %PROMPT%
 
-if defined _OLD_VIRTUAL_PATH (
-    set PATH=%_OLD_VIRTUAL_PATH%
-    goto SKIPPATH
-)
+if defined _OLD_VIRTUAL_PATH set PATH=%_OLD_VIRTUAL_PATH%; goto SKIPPATH
+
 set _OLD_VIRTUAL_PATH=%PATH%
 
 :SKIPPATH
-set PATH=%VIRTUAL_ENV%\\__BIN_NAME__;%PATH%
+set PATH=%VIRTUAL_ENV%\__BIN_NAME__;%PATH%
 
 :END
